# CtrlAltDegree

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  start-dev.sh
backend/: OfficialTranscript.txt  advisor_system_prompt.txt  ai.py  app.py  log.txt  ocr_search.py  penis.md
backend/db/: database.sqlite
src/: App.tsx  index.css  types.d.ts
src/api/: aiAPI.ts  constants.ts  semesterCourseAPI.ts  userAPI.ts
src/atoms/: appAtoms.ts
src/components/: CourseCard.tsx  NoiseEffect.tsx  ProtectedRoute.tsx  SemesterCourseModal.tsx  Sidebar.tsx
src/components/Dino/: Dino.css  Dino.tsx
src/components/semesterclass/: AddAssignmentForm.tsx  AssignmentCard.tsx  AssignmentList.tsx  CategorySidebar.tsx  CourseHeader.tsx  GradeUtils.ts  StatsPanel.tsx
src/context/: AuthContext.tsx
src/json/: courses.json  courses_OLD.json  requirements.json  requirementsDB.json
src/pages/: SignIn.tsx  SignUp.tsx
src/views/: Profile.tsx  Settings.tsx
src/views/advisor/: EditableTranscript.tsx  VirtualAdvisor.tsx
src/views/degree/: DegreeProgress.tsx
src/views/home/: Home.tsx  TranscriptSetup.tsx
src/views/semester/: MySemester.tsx  SemesterClass.tsx
stuff/: TODO.txt
